--- a/deployments/helm/nvidia-device-plugin/values.yaml
+++ b/deployments/helm/nvidia-device-plugin/values.yaml
@@ -3,29 +3,20 @@
 # Use "name" to point to an external ConfigMap with a list of configurations.
 # Use "map" to build an integrated ConfigMap from a set of configurations as
 # part of this helm chart. An example of setting "map" might be:
-# config:
-#   map:
-#     default: |-
-#       version: v1
-#       flags:
-#         migStrategy: none
-#     mig-single: |-
-#       version: v1
-#       flags:
-#         migStrategy: single
-#     mig-mixed: |-
-#       version: v1
-#       flags:
-#         migStrategy: mixed
 config:
-  # ConfigMap name if pulling from an external ConfigMap
-  name: ""
-  # Set of named configs to build an integrated ConfigMap from
-  map: {}
-  # Default config name within the ConfigMap
-  default: ""
-  # List of fallback strategies to attempt if no config is selected and no default is provided
-  fallbackStrategies: ["named" , "single"]
+  map:
+    default: |-
+      version: v1
+      flags:
+        migStrategy: none
+    mig-single: |-
+      version: v1
+      flags:
+        migStrategy: single
+    mig-mixed: |-
+      version: v1
+      flags:
+        migStrategy: mixed
 
 compatWithCPUManager: null
 migStrategy: null
